- drakedm: Do not use ancient dm init script to restart DM

Version 16.52 - 5 February 2015

- libDrakX/fsedit.pm: new "simple" partitioning scheme
  o create separate /home only when more than 50G are available
  o in such case, / is 6/19th of the available space up to 50G,
    swap is 1/19th up to 4G and /home is the rest (12/19th)
  o https://ml.mageia.org/l/arc/dev/2014-12/msg00330.html
- recognize new kernel-3.19 drivers
- fix GPT initialization on empty disk

Version 16.50 - 9 January 2015

- add UEFI support

Version 16.49 - 20 December 2014
 
- recognize new kernel-3.18 drivers (mga#14799)

- drakboot:
  o do not crash if fstab contains a bind mount on a file (mga#14657)

Version 16.46 - 25 November 2014

- harddrake:
  o recognize e17/lxde/mate/razor (mga#12495, Luc Menut)
- split drakbug support in its own module (mga#14565)

Version 16.44 - 23 October 2014

- fix drakxservices not showing all services due to systemctl output change
- draksound
  o adapt to the switch to systemd for spawning PulseAudio

Version 16.42 - 18 September 2014

- only allow GRUB2 when booting on btrfs
- don't include display_installer_help in drakxtools, it can not run outside
  install

Version 16.41 - 31 August 2014

- add packages to wanted_hardware_packages list to prevent them being removed:
  * b43-fwcutter, b43-openfwwf, atmel-firmware, speedtouch-firmware
  * zd1211-firmware, isdn4k-utils, rfkill, x11-driver-input-wacom
- allow /boot on btrfs
- recognize new kernel-3.17 drivers

Version 16.39 - 17 August 2014

- mygtk3:
  o add support for gtkset() on 'ComboBoxText' widgets for drakpxelinux
- recognize new kernel-3.16 drivers
- switch uid/gid boundary to 1000+

Version 16.37 - 3 July 2014

- diskdrake:
  o improve fs sorting in combo box (mga#13640)

Version 16.34.1 -  1 July 2014

- default to chrony if found
- fix export of correct distro_release & distro_release_information subroutines
- fix unnecessary '-noleaf' argument passed to 'find' in timezone.pm that