@@ -1,3 +1,4 @@
+- i18n: Write the desired console font to /etc/vconsole.conf
 - drakedm: Do not use ancient dm init script to restart DM
 
 Version 16.52 - 5 February 2015
